--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forever Us - Private Space for Two Hearts</title>
     <meta name="description" content="A private and romantic space exclusively for couples to connect, share memories, and stay close with complete privacy and security." />
+    
+    <!-- ✅ Force blank favicon -->
+    <link rel="icon" href="data:," />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
